--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model HairSalon.Models.Category
+@model HairSalon.Models.Stylist
 
 <h2>Edit</h2>
 
-<h4>Edit this category: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Edit this stylist: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
